date picker layout bug fix

--- a/global-styles/_filters.scss
+++ b/global-styles/_filters.scss
@@ -54,7 +54,6 @@
   }
 
   .react-datepicker-wrapper {
-    width: 100%;
     .react-datepicker__input-container {
       width: 100%;
       input {
